--- a/Intracellular metabolites/description
+++ b/Intracellular metabolites/description
@@ -12,3 +12,8 @@ The extract and cell debris were washed off from the filter and transferred to a
 All extract mixtures were subject to centrifugation at maximum speed (20817 x g) for 5 minutes at 4°C. 
 The supernatants (metabolome extracts) were stored at -20°C for analysis.
 
+Metabolome extracts were subject to LC-MS analysis (see Pisithkul et al., 2019 for details). RAW files were converted to .mzXML uploaded here.
+
+13C-glucose labeled E. coli intracellular metabolite extract was spiked into B. subtilis biofilm metabolome samples for quantitation purpose.
+
+Data provided here are in 3 biological replicates.
